added basic css

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sahil's contact</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h3>Contact Details</h3>
@@ -12,7 +13,7 @@
         <li>Phone: 9999988888</li>
     </ul>
     <hr>
-    <form action="mailto:myGmail.com" method="post" enctype="text/plain">
+    <form action="mailto:mygmail.com.com" method="post" enctype="text/plain">
         <label>Your Name :</label>
         <input name="yourName" type="text"><br>
         <label>Your Email :</label>
