--- a/hobbies.html
+++ b/hobbies.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Sahil's Hobbies</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h3>My Hobbies</h3>
     <ol>
         <li>Painting</li>
         <li>Writing</li>
-        <li>Playing Competitve <a href="https://clashroyale.com/">Clash Royale</a></li>
+        <li>Playing Competitive <a href="https://clashroyale.com/">Clash Royale</a></li>
         <li>Programming</li>
     </ol>
 </body>
