--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Sahil's 💛 Website</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <!--
+    Internal css
+    <style>
+        body {
+            background-color: powderblue;
+        }
+        /*
+        Height of 1px without border will make the 'hr' invisible
+
+        hr {
+            border-style: dotted none none none;
+            border-color: #256D85;
+            border-width: 5px;
+            height: 1px;
+            width: 5%;
+        }
+    </style>
+    -->
+
 </head>
 <body>
     <table cellspacing="20">
@@ -30,7 +50,6 @@
 
     <h3>Work Experience</h3>
     <table>
-        <!-- Table header, body and foot elements are not necessary but help in separation of content -->
         <thead>
         <tr>
             <th>Year</th>
@@ -50,33 +69,14 @@
     </table>
     <hr>
     <h3>Skills</h3>
-    <!-- Using html for affecting layout can make code complex like below -->
     <table cellspacing="10">
         <tr>
-            <td>
-                <table cellspacing="10">
-                    <tr>
-                        <td>Python</td>
-                        <td>☆☆☆☆</td>
-                    </tr>
-                    <tr>
-                        <td>C++</td>
-                        <td>☆☆☆</td>
-                    </tr>
-                </table>
-            </td>
-            <td>
-                <table cellspacing="10">
-                    <tr>
-                        <td>C</td>
-                        <td>☆☆☆</td>
-                    </tr>
-                    <tr>
-                        <td>Java</td>
-                        <td>☆☆☆</td>
-                    </tr>
-                </table>
-            </td>
+            <td>Python</td>
+            <td>☆☆☆☆</td>
+        </tr>
+        <tr>
+            <td>C++</td>
+            <td>☆☆☆</td>
         </tr>
     </table>
     <hr>
